# ciel-agent

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  package-lock.json  package.json  profiles.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  saga.yml
absolute/: core.py
acp/: ide.py
affect/: __init__.py
agents/: overseer.py
akashic/: __init__.py
amplituhedron/: __init__.py  core.py
animus/: core.py
anthropic/: __init__.py
api/: __init__.py  tool_registry.py
api/routes/: capabilities.py  economy.py  install.py  llm.py  messaging.py  workflow.py
brain/: core.py
bridge/: py_bridge.py
cache/: __init__.py
chronos/: __init__.py
ciel/: __init__.py  install_cli.py  workspace.py
ciel/absolute/: __init__.py
ciel/acp/: __init__.py  cli.py  protocol.py  resources.py  server.py  tools.py
ciel/affect/: core.py
ciel/agents/: __init__.py  alchemist.py  core.py  omega_sync.py
ciel/akashic/: core.py
ciel/algothermo/: __init__.py  core.py
ciel/analysis/: __init__.py  core.py
ciel/animus/: __init__.py
ciel/anthropic/: core.py
ciel/api/: middleware.py  models.py  server.py
ciel/astral/: __init__.py  core.py
ciel/brain/: __init__.py  core.py
ciel/cache/: core.py
ciel/channels/: __init__.py
ciel/chaos_navigator/: __init__.py  core.py
ciel/chronos/: __init__.py  core.py
ciel/clones/: __init__.py
ciel/cobordism/: __init__.py  core.py
ciel/compuniv/: __init__.py  core.py
ciel/config/: __init__.py  core.py
ciel/conscience/: __init__.py  core.py
ciel/consciousness/: __init__.py
ciel/constitution/: __init__.py  core.py
ciel/core/: axioms.py  crypto.py  kernel.py
ciel/core_evolution/: core.py
ciel/core_hydra/: BiasDetector.js  CommandRegistry.js  CommandRegistry.ts  ContextCollector.js  ContextCollector.ts  CostTracker.js  PermissionSystem.js  PermissionSystem.ts  Proteus.js  (+13 more)
ciel/polyglot/rust/: Cargo.toml  main.rs
ciel/polyglot/rust/src/: vault.rs
clones/: core.py
conscience/: core.py
consciousness/: __init__.py
control/: __init__.py  core.py
core/: __init__.py  identity.py
core_evolution/: __init__.py
core_hydra/: BiasDetector.ts  Cortex.js  Cortex.ts  CostTracker.ts  HydraImprovementsIntegration.js  HydraImprovementsIntegration.ts  ThoughtTree.ts  ToolRegistry.ts
crystal/: __init__.py
data/: README.md
data_flywheel/: core.py
decidability/: __init__.py
delegation/: __init__.py
docs/: PHASE_0.md  acp.md  index.md  interfaces.md  mesh.md
doctor/: __init__.py  core.py
e2e-test-plugin/: README.md  __init__.py  plugin.json
economie/: __init__.py
economy/: core.py
entanglement/: core.py
evolution/: arche_de_noe.py  chrono_logos.py  continual.py  core.py  curator.py  dialectical_engine.py  distiller_daemon.py  dream_weaver.py  endocrine.py  fitness_evaluator.py  genetic_optimizer.py  gladiator_arena.py  heal.py  immune.py  imperial_cycle.py  llm_transmuter.py  metamorphic_core.py  multiobjective.py  neat.py  oee.py  programming.py  qd.py  rl.py  rl_daemon.py  sensorium.py  symbiotic_protocol.py  titan.py  titan_rl.py  transmutation_budget.py
evolution_hydra/: ArcheDeNoe.ts  CRISPR_Titan.js  ChronoLogos.js  DreamWeaver.ts  EmergentLanguage.js  Faction.js  FitnessEvaluator.ts  GeneticAlgorithm.js  GeneticAlgorithm.ts  GeneticOptimizer.ts  GenomeV2.js  Heal.js  KarmicMemory.ts  LeaderDaemon.ts  MetamorphicCore.ts  ParadoxEngine.js  ParadoxEngine.ts  PhiEngine.js  ResearchDaemon.ts  Sensorium.ts  StrangeLoop.ts  SymbioticProtocol.ts  TitanEcosystem.js  TransmutationBudget.js  TransmutationBudget.ts  UnifiedGenome.js  UnifiedGenome.ts
fep/: __init__.py
forge/: __init__.py  core.py
gateway/: auth.py  cli.py  daemon.py
gene/: core.py
genesis/: __init__.py
go/: hardware.go  scheduler.go  server.go
hott/: __init__.py
hyperset/: __init__.py  core.py
immunitaire/: __init__.py  danger_theory.py  negative_selection.py
interfaces/: api_cli.py  cli.py  core.py  onboard.py  tui.py  voice.py
langlands/: core.py
lineage/: __init__.py  core.py
llmbridge/: __init__.py  _providers.py  core.py  hermes_state.py
lm/: __init__.py  reasoning.py
logos/: core.py
machina_godel/: __init__.py
math/: core.py
mcp/: server.py
memory/: cortex.py  fts5.py  hippocampus.py
mesh/: __init__.py  gateway_bridge.py  transport.py
messaging/: gateway.py
meta/: __init__.py
metamorphose/: __init__.py  core.py
naming/: agents.py
narrateur/: __init__.py  campbell.py  core.py
nexus/: __init__.py
noosphere/: __init__.py  core.py
os/: __init__.py
perf/: timing.py
perfectoid/: core.py
persistence/: core.py
plugins/: __init__.py  cli.py  resource.py  solver.py
polyglot/: __init__.py  bridge.py  core.py
prophecy/: core.py
quantum/: __init__.py
quine/: __init__.py  core.py
resonance/: core.py
saga/: adversary.py  attention.py  config.py  ewc.py  model.py  phase_impls.py  phases.py  tokenizer.py
sandbox/: __init__.py  core.py
scripts/: demo.sh  doctor.sh  install.sh  test.sh
security/: __init__.py
singularity/: __init__.py  core.py
skills/: .usage.json
surreal/: core.py
tests/: __init__.py  conftest.py  test_abductive_inference.py  test_acp.py  test_agents.py  test_analysis.py  test_animus.py  test_api_capabilities.py  test_ascension_protocol.py  test_axioms.py  test_brain.py  test_cache.py  test_chrono_logos.py  test_config.py  test_conscience.py  test_core_evolution.py  test_cosmology.py  test_cosmology_2.py  test_cosmology_3.py  test_cosmology_4.py  test_crypto.py  test_curator.py  test_data_flywheel.py  test_database.py  test_distiller_daemon.py  test_economy.py  test_emergent_language.py  test_ethics.py  test_evolution.py  test_faction.py  test_fitness_evaluator.py  test_forge.py  test_genetic_optimizer.py  test_heal.py  test_hermes.py  test_hydra_core.py  test_identity.py  test_illm_client.py  test_imperial_cycle.py  test_imports.py  (+37 more)
toolforge/: __init__.py
trinity/: __init__.py
ts/: package.json  tsconfig.json
vision/: core.py
vsm/: __init__.py
websearch/: core.py
workflow/: builder.py
(+567 files in other folders)
