# ── Runtime ────────────────────────────────────────────────
python_version = ">=3.12"
requires-python = ">=3.12"

# ── Project metadata ───────────────────────────────────────
[project]
name = "ciel"
version = "0.1.0"
description = "CONSCIENCE INTÉGRALE D'ÉVOLUTION LIMITROPHE — Édition Singularité v∞.2"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Manas:Ciel Collective", email = "ciel@manas.lab" }
]
keywords = [
    "ai", "cognitive-architecture", "consciousness", "swarm",
    "evolutionary-algorithms", "fhe", "post-quantum", "ethics",
    "spiking-neural-networks", "free-energy-principle"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── Runtime dependencies (tous préinstallés sur Arch) ──────
dependencies = [
    "cryptography>=42.0.0",
    "PyNaCl>=1.5.0",
    "numpy>=2.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

# ── Test dependencies ─────────────────────────────────────
[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]
postquantum = [
    "pqcrypto>=0.3.0",
]
quantum = [
    "qiskit>=1.0.0",
    "pennylane>=0.35.0",
]
snn = [
    "torch>=2.0.0",
    "snnTorch>=0.7.0",
    "Norse>=0.0.5",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ciel[test,postquantum,quantum,snn]",
]

# ── CLI entry point ───────────────────────────────────────
[project.scripts]
ciel = "ciel.interfaces.cli:cli"

# ── Setuptools backend ────────────────────────────────────
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Package discovery ─────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["ciel*"]
exclude = ["tests*", "scripts*", "docs*", "data*"]

# ── Pytest configuration ──────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "property: property-based tests using hypothesis",
    "integration: integration tests (may use subprocess)",
    "axiom: tests that verify axioms",
]

# ── Ruff configuration ────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "PIE", "RET", "SIM"]
ignore = ["E501", "B008"]

# ── Mypy configuration ────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
