# ── CIEL v1.0 — Polyglot Edition ─────────────────────────
[project]
name = "ciel"
version = "1.0.0"
description = "CIEL — Conscience Intégrale d'Évolution Limitrophe (Polyglot Edition)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Manas:Ciel Collective", email = "ciel@manas.lab" }]
keywords = [
    "ai", "cognitive-architecture", "consciousness", "swarm",
    "evolutionary-algorithms", "polyglot", "ethics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: TypeScript",
    "Programming Language :: Go",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
    "PyNaCl>=1.5.0",
    "numpy>=2.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "tomli-w>=1.0.0",
    "textual>=8.0.0",
    "kuzu>=0.11.0",
    "pyarrow>=18.0.0",
    "grpcio>=1.81.0",
    "protobuf>=5.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "hypothesis>=6.100.0"]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "ciel[test]"]
vision = ["mss>=9.0", "opencv-python-headless>=4.9.0"]
control = ["pyautogui>=0.9.54", "pyperclip>=1.9.0", "notify-py>=0.3.0"]
web = ["duckduckgo_search>=7.0.0"]
all = ["ciel[dev]", "ciel[vision]", "ciel[control]", "ciel[web]"]

[project.scripts]
ciel = "ciel.interfaces.cli:cli"
ciel-api = "ciel.api.server:run_server"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ciel*"]
exclude = ["tests*", "scripts*", "docs*", "data*", "ts*", "go*", "rust*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--tb=short", "--color=yes"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "property: property-based tests using hypothesis",
    "integration: integration tests",
    "axiom: tests that verify axioms",
    "benchmark: performance benchmarks",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "PIE", "RET", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
