[package]
name = "hydra-rust-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydra_rust_bridge"
path = "src/main.rs"

[[bin]]
name = "hydra_vault"
path = "src/vault.rs"

[[bin]]
name = "hydra_math"
path = "src/math.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
